apps/app-proxy/overlays/codefreshtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefreshtest-cap-app-proxy
  namespace: codefreshtest
spec:
  ingressClassName: nginx
  rules:
  - host: codefreshtesr.10.98.94.30.nip.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
